--- a/sass/flexpanel.scss
+++ b/sass/flexpanel.scss
@@ -67,8 +67,8 @@
 		width:40px;
 		height:40px;
 		position: absolute;
-		left:-44px;
-		top:20px;
+		left:-54px;
+		top:18px;
 		z-index:9;				
 		-webkit-transform: translate3d(0,0,0);
 		-moz-transform: translate3d(0,0,0);
@@ -127,8 +127,8 @@
 			background: #333;
 			padding:0;
 			margin:0;
-			@include transform(scale(0.95));
-			@include transition(all .45s ease);			
+			//@include transform(scale(0.95));
+			//@include transition(all .45s ease);			
 			li{
 				margin:0;
 				padding:0;
@@ -209,7 +209,7 @@ body.flexpanel-active{
 				filter: alpha(opacity = 100) !important;
 			}		
 			ul{
-				@include transform(scale(1));	
+				//@include transform(scale(1));	
 			}
 		}
 	}	
